site/content/docs/5.3/utilities/text.md
---
layout: docs
title: Текст
description: Документация и примеры общих текстовых утилит для управления выравниванием, обтеканием, весом и т.д.
group: utilities
toc: true
---

## Выравнивание текста

Легко выравнивайте текст по компонентам с помощью классов выравнивания текста. Для выравнивания влево, вправо и по центру доступны адаптивные классы, которые используют те же контрольные точки по ширине области просмотра, что и система сетки.

{{< example >}}
<p class="text-start">Текст с выравниванием по левому краю для всех размеров области просмотра.</p>
<p class="text-center">Выровненный по центру текст на всех размерах области просмотра.</p>
<p class="text-end">Текст с выравниванием по правому краю для всех размеров области просмотра.</p>

<p class="text-sm-end">Выровненный по концу текст на окнах просмотра размером SM (маленький) или шире.</p>
<p class="text-md-end">Выровненный по концу текст на окнах просмотра размером MD (средний) или шире.</p>
<p class="text-lg-end">Выровненный по концу текст на окнах просмотра размером LG (большой) или шире.</p>
<p class="text-xl-end">Выровненный по концу текст на окнах просмотра размером XL (очень большой) или шире.</p>
<p class="text-xxl-end">Выровненный по концу текст на окнах просмотра размером XXL (очень очень большой) или шире.</p>
{{< /example >}}

{{< callout info >}}
Обратите внимание, что мы не предоставляем служебные классы для выравнивания текста по всей ширине. Хотя эстетически выровненный по ширине текст может выглядеть более привлекательно, он делает интервалы между словами более случайными и, следовательно, труднее читать.
{{< /callout >}}

## Перенос текста и переполнение

Оберните текст классом `.text-wrap`.

{{< example >}}
<div class="badge text-bg-primary text-wrap" style="width: 6rem;">
  Этот текст следует обернуть.
</div>
{{< /example >}}

Запретить перенос текста с помощью класса `.text-nowrap`.

{{< example >}}
<div class="text-nowrap bg-body-secondary border" style="width: 8rem;">
  Этот текст должен переполнять родительский.
</div>
{{< /example >}}

## Перенос слова

Предотвратите разрушение макета ваших компонентов длинными строками текста, используя `.text-break` для установки `word-wrap: break-word` и `word-break: break-word`. Мы используем `word-wrap` вместо более обычного `overflow-wrap` для более широкой поддержки браузеров и добавляем устаревший `word-break: break-word`, чтобы избежать проблем с гибкими контейнерами.

{{< example >}}
<p class="text-break">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p>
{{< /example >}}

{{< callout warning >}}
Обратите внимание, что [перенос слов на арабском языке невозможен](https://rtlstyling.com/posts/rtl-styling#3.-line-break), который является наиболее часто используемым языком RTL. Поэтому `.text-break` удаляется из нашего RTL-скомпилированного CSS.
{{< /callout >}}

## Преобразование текста

Преобразуйте текст в компонентах с помощью наших классов заглавных букв текста: `text-lowercase`, `text-uppercase` или `text-capitalize`.

{{< example >}}
<p class="text-lowercase">Текст в нижнем регистре.</p>
<p class="text-uppercase">Текст в верхнем регистре.</p>
<p class="text-capitalize">Заглавный текст.</p>
{{< /example >}}

Обратите внимание, как `.text-capitalize` изменяет только первую букву каждого слова, не затрагивая регистр любых других букв.

## Размер шрифта

Быстро изменить размер шрифта текста `font-size`. В то время как наши классы заголовков (например, `.h1`–`.h6`) применяют `font-size`, `font-weight` и `line-height`, эти утилиты применяют _только_ `font-size`. Размер этих утилит соответствует элементам заголовка HTML, поэтому по мере увеличения числа их размер уменьшается.

{{< example >}}
<p class="fs-1">.fs-1 text</p>
<p class="fs-2">.fs-2 text</p>
<p class="fs-3">.fs-3 text</p>
<p class="fs-4">.fs-4 text</p>
<p class="fs-5">.fs-5 text</p>
<p class="fs-6">.fs-6 text</p>
{{< /example >}}

Настройте свой доступный `font-size`, изменив карту Sass `$font-sizes`.

## Толщина шрифта и курсив

С помощью этих утилит можно быстро изменить `font-weight` или `font-style`. Утилиты `font-style` сокращенно обозначаются как `.fst-*`, а утилиты `font-weight` сокращаются как `.fw-*`.

{{< example >}}
<p class="fw-bold">Текст жирным шрифтом.</p>
<p class="fw-bolder">Текст жирнее (по сравнению с родительским элементом).</p>
<p class="fw-semibold">Текст, выделенный полужирным шрифтом.</p>
<p class="fw-medium">Текст среднего размера.</p>
<p class="fw-normal">Текст нормального размера.</p>
<p class="fw-light">Облегченный текст.</p>
<p class="fw-lighter">Облегченный текст (относительно родительского элемента).</p>
<p class="fst-italic">Курсив.</p>
<p class="fst-normal">Текст с обычным шрифтом</p>
{{< /example >}}

## Высота линии

Измените высоту строки с помощью утилит `.lh-*`.

{{< example >}}
<p class="lh-1">Это длинный абзац, написанный для того, чтобы показать, как наши утилиты влияют на высоту строки элемента. Классы применяются к самому элементу или иногда к родительскому элементу. Эти классы можно настроить по мере необходимости с помощью нашего служебного API.</p>
<p class="lh-sm">Это длинный абзац, написанный для того, чтобы показать, как наши утилиты влияют на высоту строки элемента. Классы применяются к самому элементу или иногда к родительскому элементу. Эти классы можно настроить по мере необходимости с помощью нашего служебного API.</p>
<p class="lh-base">Это длинный абзац, написанный для того, чтобы показать, как наши утилиты влияют на высоту строки элемента. Классы применяются к самому элементу или иногда к родительскому элементу. Эти классы можно настроить по мере необходимости с помощью нашего служебного API.</p>
<p class="lh-lg">Это длинный абзац, написанный для того, чтобы показать, как наши утилиты влияют на высоту строки элемента. Классы применяются к самому элементу или иногда к родительскому элементу. Эти классы можно настроить по мере необходимости с помощью нашего служебного API.</p>
{{< /example >}}

## Моноширинный

Измените выделение на наш стек моноширинных шрифтов с помощью `.font-monospace`.

{{< example >}}
<p class="font-monospace">Это в моноширинном пространстве</p>
{{< /example >}}

## Сброс цвета

Сбросить цвет текста или ссылки с помощью `.text-reset`, чтобы он унаследовал цвет от своего родителя.

{{< example >}}
<p class="text-body-secondary">
  Дополнительный основной текст с <a href="#" class="text-reset">ссылкой для сброса</a>.
</p>
{{< /example >}}

## Оформление текста

Украшайте текст в компонентах классами оформления текста.

{{< example >}}
<p class="text-decoration-underline">Под этим текстом есть линия.</p>
<p class="text-decoration-line-through">В этом тексте проходит линия.</p>
<a href="#" class="text-decoration-none">Текстовое оформление этой ссылки удалено.</a>
{{< /example >}}

## CSS

### Sass переменные

Переменные Sass, связанные с типом и шрифтом по умолчанию:

{{< scss-docs name="font-variables" file="scss/_variables.scss" >}}

### Sass карта

Утилиты с размером шрифта генерируются из этой карты в сочетании с нашим API утилит.

{{< scss-docs name="font-sizes" file="scss/_variables.scss" >}}

{{< scss-docs name="theme-text-map" file="scss/_maps.scss" >}}

### Sass API утилиты

Утилиты шрифта и текста указаны в нашем API утилит в `scss/_utilities.scss`. [Узнайте, как использовать API утилит.]({{< docsref "/utilities/api#использование-api" >}})

{{< scss-docs name="utils-text" file="scss/_utilities.scss" >}}
